Заготовка файла с математическими операциями

--- a/BignumArithmetic/BignumArithmetic.vcxproj
+++ b/BignumArithmetic/BignumArithmetic.vcxproj
@@ -122,10 +122,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Operations.c" />
     <ClCompile Include="Source.c" />
     <ClCompile Include="Utils.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Operations.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
