--- a/BignumArithmetic/BignumArithmetic.vcxproj.filters
+++ b/BignumArithmetic/BignumArithmetic.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Utils.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Operations.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utils.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Operations.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
